# jup-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  price.rs  rpc.rs  swap.rs
