[package]
name = "jup-cli"
authors = ["hirokisan <dev@hirokiueno.com>"]
description = "A Jupiter CLI that enables swap, etc."
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["jupiter", "solana", "swap", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/hirokisan/jup-cli"
repository = "https://github.com/hirokisan/jup-cli"
readme = "README.md"
rust-version = "1.79.0"

[[bin]]
name = "jup-cli"

[dependencies]
tokio = { version = "1", features = ["full"] }
jupiter-swap-api-client = "0.1.0"
solana-sdk = "1.14.23"
solana-client = "1.14.23"
spl-token = "6.0.0"
clap = { version = "4.5.17", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
